--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -12,6 +12,7 @@ body    {
 a   {
     outline: none;
     text-decoration: none;
+    color: #fff;
 }
 ul, ol  {
     margin: 0;
@@ -112,6 +113,29 @@ ul, ol  {
 
 .sticky-wrapper     {
     height: 70px;
+    padding: 10px 0;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: hsl(225, 73%, 60%);
+    margin-bottom: 0;
+}
+
+.image-user img     {
+    border-radius: 50%;
+}
+
+.logo a     {
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding-top: 0.3125rem;
+    padding-bottom: 0.3125rem;
+    display: inline-block;
+    margin-right: 1rem;
+    white-space: nowrap;
+    color: hsl(51, 100%, 50%);
 }
 
  .d-flex     {
@@ -214,6 +238,87 @@ ul, ol  {
     outline: none
 }
 
+#home-wrapper   {
+    margin-top: 69px;
+    min-height: 100vh;
+}
+
+#wrapper    {
+    margin-top: 69px;
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 15vw 1fr;
+    grid-template-rows: auto 1fr auto auto;
+}
+
+main    {
+     grid-column: 2 / 3;
+     grid-row: 2;
+}
+
+aside   {
+    border-right: 1px solid #c5c5c5;
+    background: #000; 
+    grid-column: 1;
+    grid-row: 1 / 3;
+    text-align: center;
+    position: fixed;
+    width: 15vw;
+    height: 100%;
+    left:  0;
+    z-index: 1;
+}
+
+footer  {
+    grid-column: 2 / 3;
+    grid-row: 3;
+    height: 40px;
+    border: 1px solid #222222;
+    margin-top: 15px;
+}
+
+.footer-content     {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    color: #000;
+}
+
+.info-box   {
+    padding: 20px;
+    border: 0.5px solid #ccc;
+    background: #f7f7f7;
+}
+
+.text-center    {
+    text-align: center;
+}
+
+.info-box p     {
+    line-height: 1.6;
+}
+
+.user-profile {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.user-profile-image {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.user-profile-image img     {
+    vertical-align: middle;
+    border-radius: 50%;
+}
+
+
+.img-fluid  {
+    height: auto;
+    max-width: 100%
+}
 @media (min-width: 576px) {
     .container {
       max-width: 540px; } }
