--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -210,7 +210,7 @@ ul, ol  {
     width: 100%;
     line-height: 40px;
     padding: 0 10px;
-    border: none;
+    border: 1px thin #024457;
 }
 
 .mb-10  {
@@ -356,7 +356,17 @@ table tr {
     content: attr(data-th);
   }
 
+  table tbody tr  td  {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+  }
 
+
+  table a   {
+      background: #024457;
+      padding: 2px 10px;
+  }
 
 
 
