ft(feature):create a political party
ensure new political party can be created

[Delivers ft-feature-UI-createPP-#163332863]

--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -394,6 +394,16 @@ table tr {
     border-radius: 0.25rem;
   }
 
+  .addNewParty      {
+      display: flex;
+      justify-content: flex-end;
+      padding-top: 30px;
+      padding-bottom: 30px;
+  }
+
+  .addNewParty a    {
+      background: hsl(120, 65%, 44%);
+  }
 
 
 
