--- a/UI/assets/css/test2.css
+++ b/UI/assets/css/test2.css
@@ -470,10 +470,12 @@ a {
 
 table   {
   border-collapse: separate;
+  background: #ed720e;
 } 
 
 table thead th  {
   font-weight: 600;
+  background: #1285ce;
 }
 
 table thead th, table tbody td    {
