--- a/assets/css/test2.css
+++ b/assets/css/test2.css
@@ -447,9 +447,16 @@ a {
     line-height: 1.6;
 }
 
-.user-profile {
+.header-container {
     padding-top: 30px;
     padding-bottom: 30px;
+    border: 1px solid red;
+    margin-bottom: 20px;
+}
+
+.subheading   {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .user-profile-image {
@@ -469,11 +476,17 @@ a {
 }
 
 table   {
-  border-collapse: separate;
+  border-collapse: collapse;
+  background: mediumaquamarine;
+  border: 1px solid maroon;
+  text-align: center;
+  width: 100%;
 } 
 
 table thead th  {
   font-weight: 600;
+  background: #340c66;
+  color: #fff;
 }
 
 table thead th, table tbody td    {
@@ -482,13 +495,21 @@ table thead th, table tbody td    {
 }
 
 table tbody td    {
-  color: #fff;
-  background: #222;
+  color: #222;
+  vertical-align: middle;
 }
 
 table tbody tr:not(:last-child) { 
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;  
+}
+
+tr:nth-child(even) {
+  background-color: #ed720e;
+}
+
+th, td {
+  border-bottom: 1px solid #ddd;
 }
 
 @media screen and (max-width: 600px) {
@@ -506,61 +527,6 @@ table tbody tr:not(:last-child) {
     width: 6rem;  
   }
 }
-
-/* table  {
-    margin: 1em 0;
-    width: 100%;
-    overflow: hidden;
-    background: #FFF;
-    color: #222;
-    border: 1px solid #167F92;
-}
-
-table tr {
-    border: 1px solid #222;
-  }
-  table tr:nth-child(odd) {
-    background-color: rgb(68, 73, 46);
-  }
-   table th {
-    border: 1px solid #FFF;
-    color: #FFF;
-    padding: .5em;
-  } 
-  table th:first-child {
-    display: table-cell;
-    text-align: center;
-  }
-  table th:nth-child(2) {
-    display: table-cell;
-  }
-  table th:nth-child(2) span {
-    display: none;
-  }
-  table th:nth-child(2):after {
-    content: attr(data-th);
-  }
-
-  table tbody tr  td  {
-      padding-top: 10px;
-      padding-bottom: 10px;
-      margin-bottom: 10px;
-  }
-
-
-  table a   {
-      background: #024457;
-      padding: 2px 10px;
-  }
-
-  table .delete     {
-      background: red;
-      padding: 5px;
-      font-size: 12px;
-      border-radius: 0;
-      color: #FFF;
-      cursor: pointer;
-  } */
 
   .btn  {
     display: inline-block;
@@ -713,3 +679,4 @@ input[type="checkbox"] {
     justify-content: center;
     min-height: 100vh;
 }
+
