--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,13 @@
 
 body 	{
 	background: #2A587F;
-    font-family: "EB Garamond";
+    font-family: "Open Sans", sans-serif;
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 14px;
+}
+
+h1, h2, h3, h4, h5, h6      {
+    font-family: "Oswald";
 }
 
 a   {
@@ -100,6 +104,10 @@ ul, ol  {
     max-width: 100%;
 }
 
+.text-center        {
+    text-align: center;
+}
+
 .mx     {
     position: relative;
     width: 100%;
@@ -171,7 +179,7 @@ ul, ol  {
 
   .dlogo {
     display: inline-block;
-    font-size: 22px;
+    font-size: 30px;
     margin-top: 10px;
     margin-left: 20px;
     font-family: "EB Garamond", serif;
@@ -228,6 +236,10 @@ ul, ol  {
   
     .nav-item {
       margin-left: 40px;
+      font-size: 18px;
+      text-transform: uppercase;
+      font-weight: 500;
+      font-family: 'Roboto', sans-serif;
     }
   
     .dlogo {
@@ -285,7 +297,7 @@ ul, ol  {
 
 /* Banner Area */
 .banner-area    {
-    min-height: 100vh;
+    min-height: 600px;
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/background5.jpg');
     background-repeat: no-repeat;
     background-position: center center;
@@ -306,24 +318,130 @@ ul, ol  {
 }
  */
 .banner-content     {
-    padding-top: 150px;
+    /* padding-top: 150px; */
+   /*  display: flex;
+    flex-direction: column; */
 }
 
 .banner-content h1      {
     color: #fff;
     font-weight: 800;
-    font-size: 3rem;
+    font-size: 4rem;
     padding: 15px;
     margin-bottom: 0;
     padding-bottom: 0;
     text-align: center;
+    text-shadow: 0 1px 5px hsl(0, 0%, 13.3%);
+    text-transform: uppercase;
 }
 
 .banner-content p   {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    color: #ccc;
+   /*  padding-top: 0;
+    margin-top: 0; */
+}
+
+.banner-content a   {
+    background: orange;
+    color: #fff;
+    width: 150px;
 }
 
 
+/* Landing page experiment */
+
+.experi     {
+    /* align-items: center;
+    justify-content: center;
+    text-align: center; */
+    flex-direction: column;
+    height: 400px;
+}
+
+.btn  {
+    display: inline-block;
+    font-weight: 600;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+
+
+#about  {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background: #f7f7f7;
+    color: #222;
+}
+
+#about .icon    {
+    background-color: #2A587F;
+    border: 4px solid #2A587F;
+    height: 148px;
+    width: 148px;
+    border-radius: 50%;
+    display: block;
+    font-size: 80px;
+    line-height: 140px;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+    color: #fff;
+}
+
+#about .icon:hover   {
+    background: #fff;
+    color: #2A587F;
+    transition: all 0.2s linear;
+}
+
+#about h3   {
+    font-weight: 700;
+}
+
+.feature    {
+    padding: 5px;
+}
+
+p       {
+    line-height: 1.5;
+    font-size: 1rem;
+}
+
+h3      {
+    font-size: 24px;
+}
+
+footer  {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background: #024457;
+    color: #f7f7f7;
+}
+
+footer h4   {
+    letter-spacing: 2px;
+}
+
+footer li   {
+    line-height: 1.5;
+}
+
+footer li a     {
+    font-size: 1rem;
+}
+
+
+/* media query for page responsiveness */
  @media (min-width: 576px) {
     .container {
       max-width: 540px; } }
