ch(css styling): add mobile responsiveness
Mobile responsiveness is added to landing page, login, page, signup page
and password reset page to allow users with small screen have a good
user experience.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,18 @@ ul, ol  {
     }
   }
 
+  @media only screen and (max-width: 768px)  {
+      .col-4     {
+          flex: 0 0 100%;
+          max-width: 100%;
+      }
+
+      .col-6    {
+          flex: 0 0 80%;
+          max-width: 80%;
+      }
+  }
+
 /*Form*/
 .single-input input   {
     width: 100%;
